# NNUE-mlx

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
scripts/: bench_cnative_search.py  evaluate.py  monitor.py  pipeline.py  pipeline_config.py  pipeline_core.py  pipeline_eval.py  pipeline_train.py  play.py  quantize.py  selfplay.py  train.py
src/accel/: __init__.py  _accel_accum_eval.c  _accel_accum_init.c  _accel_accum_ops.c  _accel_accum_types.c  _accel_attacks.c  _accel_direct.c  _accel_features.c  _accel_helpers.c  _accel_module.c  _accel_simd_ops.c  _chess_constants.c  _chess_eval_c.c  _chess_make_unmake.c  _chess_movegen_c.c  _chess_position.h  _chess_pyapi.c  _chess_rule_search.c  _csearch_accum.c  _csearch_alphabeta.c  _csearch_cnative.c  _csearch_lifecycle.c  _csearch_methods.c  _csearch_ordering.c  _csearch_qsearch.c  _csearch_root.c  _csearch_types.c  _csearch_utils.c  _nnue_accel.c  _nnue_accel_header.h  _shogi_constants.c  _shogi_eval_c.c  _shogi_make_unmake.c  _shogi_movegen_c.c  _shogi_position.h  _shogi_pyapi.c  _shogi_rule_search.c
src/features/: base.py  halfkp.py  halfkp_shogi.py
src/games/: base.py  chess.py  chess_pc.py  minichess.py  minishogi.py  shogi.py
src/gui/: _board_interaction.py  _file_browser.py  analysis.py  app.py  board_renderer.py  chess_gui.py  (+9 more)
tests/: test_accel.py  test_chess.py  test_chess_c.py  test_cnative_integration.py  test_cnative_search.py  test_evaluator.py  test_features.py  test_minichess.py  test_minishogi.py  test_nnue.py  test_search.py  test_shogi.py  test_sota_stack.py  test_tournament.py
(+39 files in other folders)
