[build-system]
requires = ["setuptools>=68.0", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnue-mps"
version = "0.1.0"
description = "NNUE chess/shogi AI with Apple MLX training on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.26.0",
    "pygame>=2.5.0",
    "setuptools>=68.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
